添加了spring boot项目搭建的pom注释

--- a/Test19-SpringBoot2/src/main/resources/application.properties
+++ b/Test19-SpringBoot2/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 
 spring.profiles.active=prod
-#server.context-path=/helloboot
+server.context-path=/helloboot
 #server.port=8081
 #logging.file=/home/sang/workspace/log.log
 #logging.level.org.springframework.web=debug
