--- a/Test19-SpringBoot2/pom.xml
+++ b/Test19-SpringBoot2/pom.xml
@@ -11,6 +11,7 @@
 	<name>Test19-SpringBoot2</name>
 	<description>Demo project for Spring Boot</description>
 
+    <!-- 步骤一：添加Spring Boot父级依赖 -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -24,6 +25,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+    <!-- 步骤二：添加相关的starter pom依赖 -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -39,10 +41,21 @@
 
 	<build>
 		<plugins>
+            <!-- 步骤三：添加Spring Boot的编译插件-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+            <!-- 步骤四：maven添加jdk1.7支持-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
